Comment-out call to crashing ReloadChrome() so we can call bug 39367 fixed.